# sendspin-xiao

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: pages.yml  release.yml
main/: CMakeLists.txt  Kconfig.projbuild  i2s_audio_sink.cpp  i2s_audio_sink.h  idf_component.yml  main.cpp  mdns_init.cpp  mdns_init.h  nvs_persistence.cpp  nvs_persistence.h  ota_server.cpp  ota_server.h  status_led.cpp  status_led.h  wifi_init.cpp  wifi_init.h  wifi_provisioning.cpp  wifi_provisioning.h
tools/: ota_push.py
web-flasher/: index.html  manifest.json
